Add CSS to HTML base making design complete!

--- a/index.html
+++ b/index.html
@@ -15,61 +15,53 @@
         <!--Header [Address Bar]-->
         <div class="header">
 
-            <img src="" alt="">
+            <p class="header-logo-text">Header Logo</p>
 
-            <a href="">
-                Header Link One
-            </a>
+            <p class="header-link"> Header Link 1</p>
 
-            <a href="">
-                Header Link Two
-            </a>
+            <p class="header-link"> Header Link 2</p>
 
-            <a href="">
-                Header Link Three
-            </a>
+            <p class="header-link"> Header Link 3</p>
 
         </div>
 
         <!--Text & Image-->
-        <div class="section">
+        <div class="intro-section">
 
             <div class="left-section">
 
-                <h1>
+                <p class="section-title">
                     Say hi to the Developer!
-                </h1>
+                </p>
 
-                <h3>
+                <p class="section-text">
                     I'm getting better at Frontend Development and HTML / CSS.
-                </h3>
+                </p>
 
                 <div class="button-style-one">
-
-                    <p class="button-text-one">
+                    <button class="button-text-one">
                         Download CV
-                    </p>
-
+                    </button>
                 </div>
 
             </div>
 
-            <img src="" alt="Photo of the developer, Mark!">
+            <img src="" alt="Photo of the developer, Mark!" height="auto" width="500px">
 
         </div>
 
         <!--Gallery Info-->
-        <div class="section">
+        <div class="gallery-section">
 
-            <h2>
+            <p class="gallery-section-title">
                 Gallery of Past Projects!
-            </h2>
+            </p>
 
             <div class="gallery">
 
                 <div class="galley-item">
 
-                    <img src="" alt="Picture 1">
+                    <img src="" alt="Picture 1" height="200px" width="100px">
 
                     <p>
                         Subtext for item 1
@@ -79,7 +71,7 @@
 
                 <div class="galley-item">
 
-                    <img src="" alt="Picture 2">
+                    <img src="" alt="Picture 2"  height="200px" width="100px">
 
                     <p>
                         Subtext for item 2
@@ -89,7 +81,7 @@
 
                 <div class="galley-item">
 
-                    <img src="" alt="Picture 3">
+                    <img src="" alt="Picture 3"  height="200px" width="100px">
 
                     <p>
                         Subtext for item 3
@@ -99,7 +91,7 @@
 
                 <div class="galley-item">
 
-                    <img src="" alt="Picture 4">
+                    <img src="" alt="Picture 4"  height="200px" width="100px">
 
                     <p>
                         Subtext for item 4
@@ -111,28 +103,28 @@
         </div>
 
         <!--Testimonial Review-->
-        <div class="section">
+        <div class="quote-section">
 
-            <h3 class="quote">
+            <p class="quote">
                 "I have not failed 700 times. I have not failed once. I have succeeded in proving that those 700 ways will not work. When I have eliminated the ways that will not work, I will find the way that will work."
-            </h3>
+            </p>
 
-            <h4 class="credit">
+            <p class="credit">
                 -Thomas A. Edison
-            </h4>
+            </p>
 
         </div>
 
         <!--News Letter Signup-->
-        <div class="section">
+        <div class="news-letter-section">
 
             <div class="left-four-section">
 
-                <h4>
+                <p class="section-title">
                     Want to view more of my work!
-                </h4>
+                </p>
 
-                <p>
+                <p class="section-text">
                     Click on the button to be taken to my GitHub. Once my portfolio website is up and running with a solid design and actions, then this link will be updated to that domain. Until then, enjoy my GitHub!
                 </p>
 
@@ -141,7 +133,7 @@
             <div class="button-style-two">
 
                 <p class="button-tex-two">
-                    My work!
+                    Review!
                 </p>
 
             </div>
@@ -156,6 +148,6 @@
             </p>
 
         </div>
-        
+
     </body>
 </html>
